--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Apps, extensions, and shortcuts]] Categories [[Main page]]" title="$:/StoryList">
+<div list="[[Advice for a mathlete]] [[Links for life]] Categories [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5710,8 +5710,8 @@ Error message and password prompt
 <div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20151210040058952" title="$:/temp/search">
-<pre></pre>
+<div created="20150126153012617" modified="20160210023103242" title="$:/temp/search">
+<pre>advic</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -5843,10 +5843,8 @@ See [[Tabarrok's article|http://www.cato-unbound.org/2012/11/12/alex-tabarrok/wh
 # Criticism: &quot;&quot;&quot;MOOCs&quot;&quot;&quot; are a threat to universities. A: ''Universities are not made obsolete, but they need to adapt their educational practices by focusing on doing in-class what cannot be done online.'' In fact, rather than having its professors waste time to develop a circuits course that has already been done (they could if they think they would do it better than &quot;&quot;&quot;EdX&quot;&quot;&quot;), they could use these online materials, and then just add labs, discussions, focus on special topics, and so forth not present in the &quot;&quot;&quot;MOOC&quot;&quot;&quot;. This brings a &amp;#8220;remixing&amp;#8221; spirit to curriculum design.
 # A more serious issue with &quot;&quot;&quot;MOOCs&quot;&quot;&quot; is that they are geared towards students who already &amp;#8220;know&amp;#8221; how to learn, and do not motivate students who are struggling or disillusioned with learning in the first place.</pre>
 </div>
-<div changecount="10" created="20130917234000000" creator="Holden" modified="20151020021440905" modifier="Holden" tags="math advice under_construction" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
+<div changecount="10" created="20130917234000000" creator="Holden" modified="20160210032454550" modifier="Holden" tags="math advice" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
 <pre>Back to [[Math]]. (Note: I'd be happy to talk if you still have questions; just shoot me an email.)
-
-//UNDER CONSTRUCTION//
 
 !1 Advice for high-schoolers (including, but not limited to, mathletes)
 
@@ -5866,7 +5864,10 @@ Every subject has a reason for being interesting; the problem is that most of th
 
 ''Q: I want to do well on math competitions (ex. USAMO). What do I do?''
 
-''A:'' In addition to stuff most people learn in high school classes there is some more material you need to know (number theory, inequalities, geometry (read Geometry Revisited by Coxeter), combinatorics). What matters is your ability to tackle challenging math problems, and the ONLY way is to actually do challenging problems. //The best way to practice for math competitions is by working through past tests (under Olympiad conditions), and you can find them online on Art of Problem Solving or the AMC website.// Practice under test conditions, but also think more about the problems you didn't solve. Do NOT passively read solutions - you do not learn anything this way. When you read solutions, asking yourself how you could have come up with them yourself. 
+''A:'' In addition to stuff most people learn in high school classes there is some more material you need to know (number theory, inequalities, geometry (e.g. read Geometry Revisited by Coxeter), combinatorics). What matters is your ability to tackle challenging math problems, and the ONLY way is to actually do challenging problems. //The best way to practice for math competitions is by working through past tests (under Olympiad conditions). You can find them online on Art of Problem Solving or the AMC website.// Practice under test conditions, but also think more about the problems you didn't solve. Do ''NOT'' passively read solutions - you do not learn anything this way. When you read solutions, asking yourself how you could have come up with them yourself - and then make sure you are able to! - perhaps some time later.
+
+As in learning //anything// you should organize your work. Your efforts should be additive. Keep track of problems you've solved so you can find them again, write or at least outline solutions nicely so you can remind yourself of the solution anytime; note particular techniques that work, pitfalls, etc. The same goes for learning the theory. 
+If you find yourself constantly forgetting math you learn (ex. you keep forgetting a proof of something), then slow down and learn it more completely (ex. trying to derive things for yourself). Leave behind bread crumbs.
 
 ''Q: What books do you recommend?''
 
@@ -5878,11 +5879,19 @@ Every subject has a reason for being interesting; the problem is that most of th
 * IMO Compendium - contains all the previous IMO's and shortlists with complete solutions
 * Problems from the Book - more advanced, and probably goes beyond the scope of what you'd need for Olympiads, but it's beautiful math.
 
-(There are a lot more books out there now, these are just the books I personally found useful when I was in high school.)
+(There are a lot more books out there now, these are just the books I personally found most useful when I was in high school.)
 
 //It's less important which book you choose as that you spend the time working on the problems. You can do some from one book and some from another, and/or choose one book to focus on at a time. Take a look at some of them, and then just choose one or a few that's compatible with your current level. Do identify what areas of math you need to work on the most, and find resources to target those.//
 
 How comfortable are you with proof writing? If it's something you feel you need work on, it could be useful to enroll in a program where you can get feedback on your work, for instance, WOOT or ~AwesomeMath Year-Round. (These programs are also nice if you don't know where to start on your own).
+
+''Q: How much time should I spend? How much time did you spend?''
+
+''A:'' This is up to you. It depends on what you want to get out of math competitions, and what other things you want to do. Please don't feel like you have to spend a certain amount of time on it. It's possible to get a lot of the benefits of math competitions in terms of general problem-solving ability without going all-out on it - if you don't insist on winning (too much focus on winning is, in any case, dangerous). If on the other hand you care about doing well very much, then you will probably have to spend more time. It's good to push yourself to do more than you naturally would (ex. you may want to give up on a hard problem, but you should build up some perseverance). Wanting to get better at math or liking it are good reasons for spending more time; wanting to win is not by itself a good reason.
+
+Personally, I spent the vast majority outside schoolwork on math contest preparation (I had few other commitments - I would recommend not having many commitments if you want to spend more time on math.) While it's easy to spin this to say that I'm &quot;hardworking&quot;; really, a large reason for this was that I was not exposed to other valuable things to be doing. There is unfortunately some idolization of people who &quot;just do math&quot; - certainly they are to be respected, but not to be imitated unless you //are// that sort of person.
+
+There's really two questions: how much of time to spend being &quot;productive&quot; (for a general definition of productive - ex. art is productive, not just science) and how much of productive time to spend training for math competitions. The first ratio is good to increase in any case; the second is really up to you. Don't chase after the bonus points you get (ex. for college apps) for putting a lot of eggs in the math competition basket.
 
 !3 Beyond math competitions
 
@@ -5890,15 +5899,30 @@ How comfortable are you with proof writing? If it's something you feel you need 
 
 ''A:'' It's good to ask yourself what you want to get out of competition success. Is it the recognition? Is it the math community? Looking for recognition is unsustainable in the long run; your desire to do math should come from something deeper than just wanting to do well on competitions (though that is a perfectly okay way to start; I got interested in math a large part because of competitions, and so did a lot of other people I know). As to community, the quality of a math community isn't all about how smart the people are; perhaps you can find others in your school, and if not, there are plenty of other math programs and camps (for me AwesomeMath was a great experience). It's good to be around other people who like math for the sake of math, and it tends to rub off. I did not make it to MOP myself, and at this point, it matters little to my happiness or sense of self-worth. What really matters are not the results but what you get out of the training and the experience. You learn a lot of problem-solving and hard work, and those things are useful.
 
-There's no clear &quot;antidote&quot; for thinking in terms of achievement, but I think being exposed to interesting problems/projects and being around people who really care about what they do is as helpful as anything.
+There's no clear &quot;antidote&quot; for thinking in terms of achievement, but I think being exposed to interesting problems/projects and being around people who really care about what they do (and don't think in terms of achievement) is the most helpful.
 
 ''Q: What else should I be doing besides math competitions?''
 
-# On the math side: Learn some collegiate math. Read math blogs and articles; understand how math can be applied to various subjects. Work on a research project. Find a community of math people to join.
+# On the math side: 
+#* Learn some collegiate math (which is quite different from competition math - you go a lot deeper). 
+#* Read math blogs and articles.
+#* Understand how math can be applied to various subjects. 
+#* Teach other people math!
+#* Work on a research project. 
+#* Find a community of math people to join. 
 
 # On the non-math side: 
+#* If you have other strong interests, pursue them!
+#* Explore.
+#* If you have things that you want to do but don't know how to do - learn how to do them! High school and college are good times to do something like this, be it music, acting, philanthropy, etc. - there are classes, clubs, programs. After college, you can still get into new things, but the activation energy is a lot higher.
+#* Gain general transferable skills. Math teaches a specific skill - that of problem-solving. If you don't go into pure math research, then you will need other skills. Leadership/organization, people skills, communication, business, experimentation, experience abroad, performance, etc.
 
 ''Q: What is there to math beyond math competitions?''
+
+* Research is very different from math competitions. The questions need a lot of time, are open-ended, often aren't solved (instead, people spend years making incremental progress), and half the battle is finding the right questions.
+* Math is a way of life. Don't think in terms of &quot;I have to contribute something significant to mathematics or else there's no point.&quot; The goal is to understand things better. It's not far-fetched to think of it as a religion whose purpose is very personal - because it promotes a kind of clarity and direction to a person's thoughts.Read this: http://mathoverflow.net/questions/43690/whats-a-mathematician-to-do/44213#44213
+* Teaching: math is incredible important, yet the number of students who are competent in it is very low. There's no reason it has to be this way.
+* Applications (A lot of people think they want to go into pure math on the basis of math competitions, and later to decide not to. Does this mean that they wasted their time? No! A mathematical mindset is incredibly useful in many other subjects - but the skill of applying it is a separate skill to learn and develop from just doing math problems well.) 
 
 ''Q: I didn't do well on the competition:( What now?''
 
@@ -6768,13 +6792,8 @@ Other links
 * Pokemon http://www.pokemonepisode.org
 </pre>
 </div>
-<div changecount="8" created="20130917201900000" creator="YourName" modified="20150105201246787" modifier="Holden" title="Links for life" type="text/vnd.tiddlywiki">
-<pre>* Friendship/relationships
-** http://www.getlifeboat.com
-** http://www.toughloveanswers.com
-* Quora http://www.quora.com
-
-On finding your direction in life, and where school fits in
+<div changecount="8" created="20130917201900000" creator="YourName" modified="20160210023220602" modifier="Holden" title="Links for life" type="text/vnd.tiddlywiki">
+<pre>On finding your direction in life, and where school fits in
 
 * What you&amp;#8217;ll wish you&amp;#8217;d known, Paul Graham (http://www.paulgraham.com/hs.html)
 * The disadvantages of an elite education (http://theamericanscholar.org/the-disadvantages-of-an-elite-education/)
@@ -6786,8 +6805,17 @@ On finding your direction in life, and where school fits in
 ** Qiaochu Yuan&amp;#8217;s response here: http://www.quora.com/The-High-School-Experience-1/How-can-one-be-academically-successful-in-high-school
 ** http://www.quora.com/Studies-and-Studying/How-do-top-students-study
 
-On life philosophy
-* How to be rational: http://www.lesswrong.com</pre>
+Rationality
+
+* ~LessWrong http://www.lesswrong.com
+
+Other 
+
+* Friendship/relationships
+** http://www.getlifeboat.com
+** http://www.toughloveanswers.com
+* Quora http://www.quora.com
+</pre>
 </div>
 <div changecount="12" created="20130917200100000" creator="YourName" modified="20150105200015266" modifier="Holden" title="Links for math" type="text/vnd.tiddlywiki">
 <pre>Back to [[Links]]. See also [[Links for education]] for some links on math education.
@@ -6878,12 +6906,12 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20151112191858443" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20160202061448837" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
 <pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
 
-''See also my blog at http://holdenlee.wordpress.com.''
+''See also my blog at http://holdenlee.github.io/blog.''
 
 !Basic Info
 
