--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Advice for a mathlete]] [[Links for life]] Categories [[Main page]]" title="$:/StoryList">
+<div list="[[Advice for a mathlete]] [[General advice]] [[Links for life]] Categories [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5843,7 +5843,7 @@ See [[Tabarrok's article|http://www.cato-unbound.org/2012/11/12/alex-tabarrok/wh
 # Criticism: &quot;&quot;&quot;MOOCs&quot;&quot;&quot; are a threat to universities. A: ''Universities are not made obsolete, but they need to adapt their educational practices by focusing on doing in-class what cannot be done online.'' In fact, rather than having its professors waste time to develop a circuits course that has already been done (they could if they think they would do it better than &quot;&quot;&quot;EdX&quot;&quot;&quot;), they could use these online materials, and then just add labs, discussions, focus on special topics, and so forth not present in the &quot;&quot;&quot;MOOC&quot;&quot;&quot;. This brings a &amp;#8220;remixing&amp;#8221; spirit to curriculum design.
 # A more serious issue with &quot;&quot;&quot;MOOCs&quot;&quot;&quot; is that they are geared towards students who already &amp;#8220;know&amp;#8221; how to learn, and do not motivate students who are struggling or disillusioned with learning in the first place.</pre>
 </div>
-<div changecount="10" created="20130917234000000" creator="Holden" modified="20160210032454550" modifier="Holden" tags="math advice" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
+<div changecount="10" created="20130917234000000" creator="Holden" modified="20160210033602092" modifier="Holden" tags="math advice" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
 <pre>Back to [[Math]]. (Note: I'd be happy to talk if you still have questions; just shoot me an email.)
 
 !1 Advice for high-schoolers (including, but not limited to, mathletes)
@@ -5864,9 +5864,11 @@ Every subject has a reason for being interesting; the problem is that most of th
 
 ''Q: I want to do well on math competitions (ex. USAMO). What do I do?''
 
-''A:'' In addition to stuff most people learn in high school classes there is some more material you need to know (number theory, inequalities, geometry (e.g. read Geometry Revisited by Coxeter), combinatorics). What matters is your ability to tackle challenging math problems, and the ONLY way is to actually do challenging problems. //The best way to practice for math competitions is by working through past tests (under Olympiad conditions). You can find them online on Art of Problem Solving or the AMC website.// Practice under test conditions, but also think more about the problems you didn't solve. Do ''NOT'' passively read solutions - you do not learn anything this way. When you read solutions, asking yourself how you could have come up with them yourself - and then make sure you are able to! - perhaps some time later.
+''A:'' In addition to stuff most people learn in high school classes there is some more material you need to know (number theory, inequalities, geometry (e.g. read Geometry Revisited by Coxeter), combinatorics). What matters is your ability to tackle challenging math problems, and the ONLY way is to actually do challenging problems. //The best way to practice for math competitions is by working through past tests (under Olympiad conditions). You can find them online on Art of Problem Solving or the AMC website.// Regularly practice under test conditions, but also think more about the problems you didn't solve. Do ''NOT'' passively read solutions - you do not learn anything this way. When you read solutions, asking yourself how you could have come up with them yourself - and then make sure you are able to! - perhaps some time later.
 
-As in learning //anything// you should organize your work. Your efforts should be additive. Keep track of problems you've solved so you can find them again, write or at least outline solutions nicely so you can remind yourself of the solution anytime; note particular techniques that work, pitfalls, etc. The same goes for learning the theory. 
+Maintain a set of problems that you can think of at any one time. When you get stuck on one, jump to another. When you solve it, reflect a little bit (though not in the middle of competition). Compare your solution and the official solution if there is one. Ask yourself how you could have come up with it faster. Is there a simpler or more natural solution? How could you apply what you learned to other problems?
+
+As in learning //anything// you should organize your work. Your efforts should be additive. Keep track of problems you've solved so you can find them again. Write or at least outline solutions nicely so you can remind yourself of the solution anytime; note particular techniques that work, pitfalls, etc. The same goes for learning the theory. 
 If you find yourself constantly forgetting math you learn (ex. you keep forgetting a proof of something), then slow down and learn it more completely (ex. trying to derive things for yourself). Leave behind bread crumbs.
 
 ''Q: What books do you recommend?''
