--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Advice for a mathlete]] [[General advice]] [[Links for life]] Categories [[Main page]]" title="$:/StoryList">
+<div list="Categories [[My writing]] [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6908,7 +6908,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20160202061448837" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20160517135617502" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
 <pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
@@ -7455,8 +7455,10 @@ I&amp;#8217;ve written lectures for...
 * Gliya - My three interests (math, education, and writing) came together here -- I wrote geometry lessons as stories that encouraged creative problem-solving.
 My lectures are available at http://web.mit.edu/~holden1/www/math/notes.htm.</pre>
 </div>
-<div created="20150301145815176" modified="20151110021413296" title="My writing">
+<div created="20150301145815176" modified="20160517135716431" title="My writing">
 <pre>Back to [[Writing]]
+
+&lt;b&gt;Check out my current writing project,  [[Philosophocle|http://holdenlee.github.io/philosophocle/]]!&lt;/b&gt;
 
 Below are stories I have finished and information about ones that I am working on. I'd love to hear comments (including criticisms)! Just send me an email at [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]].
 
