--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories [[My writing]] [[Main page]]" title="$:/StoryList">
+<div list="Categories [[Math notes]] [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5710,8 +5710,8 @@ Error message and password prompt
 <div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20160210023103242" title="$:/temp/search">
-<pre>advic</pre>
+<div created="20150126153012617" modified="20161029035101983" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -7174,10 +7174,10 @@ What makes good math writing? What makes a math book good?
 * My quora answer on [[writing summary notes|https://www.quora.com/What-should-one-who-is-creating-a-summary-note-scribe-note-lecture-note-etc-for-an-advanced-mathematics-course-care-about/answer/Holden-Lee]]
 </pre>
 </div>
-<div created="20150301150249760" modified="20151108041246690" tags="" title="Math notes">
+<div created="20150301150249760" modified="20161029035144298" tags="" title="Math notes">
 <pre>Everything on this page is licensed under a &lt;a rel=&quot;license&quot; href=&quot;http://creativecommons.org/licenses/by-sa/3.0/&quot;&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;/a&gt;. 
 Notes for seminars and talks are available at my blog 
-http://holdenlee.wordpress.com/math-notes/.
+http://holdenlee.github.io/blog/notes.html.
 
 Most of the source code is available either below or on [[github|http://github.com/holdenlee/mathnotes]]. To compile the source you’ll need the [[LaTeX template files|https://github.com/holdenlee/templates]] (see the readme for instructions).
 
