--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Math notes]] Categories [[Main page]]" title="$:/StoryList">
+<div list="Categories Research Writing [[Main page]] [[My writing]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6908,7 +6908,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20160517135617502" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20170105201604665" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
 <pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
@@ -6919,7 +6919,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 
 * Email: [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]] or [[holdenl@princeton.edu|mailto:holdenl@princeton.edu]]
 * Education:
-** (Current) &lt;a href=&quot;https://www.math.princeton.edu/&quot;&gt;Princeton Univeristy&lt;/a&gt;, Ph.D. program in math 
+** (Current) &lt;a href=&quot;https://www.math.princeton.edu/&quot;&gt;Princeton University&lt;/a&gt;, Ph.D. program in math 
 **&lt;a href=&quot;http://www.cam.ac.uk/&quot;&gt;																University of 									Cambridge&lt;/a&gt;, 													MAST in Pure 												Math, 2014
 ** &lt;a href=&quot;http://www.mit.edu&quot;&gt;Massachusetts 
 		Institute of Technology&lt;/a&gt;, B. Sc. Math, 2013
@@ -7455,52 +7455,11 @@ I&amp;#8217;ve written lectures for...
 * Gliya - My three interests (math, education, and writing) came together here -- I wrote geometry lessons as stories that encouraged creative problem-solving.
 My lectures are available at http://web.mit.edu/~holden1/www/math/notes.htm.</pre>
 </div>
-<div created="20150301145815176" modified="20160517135716431" title="My writing">
+<div created="20150301145815176" modified="20170105201655666" title="My writing">
 <pre>Back to [[Writing]]
 
-&lt;b&gt;Check out my current writing project,  [[Philosophocle|http://holdenlee.github.io/philosophocle/]]!&lt;/b&gt;
-
-Below are stories I have finished and information about ones that I am working on. I'd love to hear comments (including criticisms)! Just send me an email at [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]].
-
-I'm currently gamemaster for [[Into the Dreamworld|https://storium.com/game/into-the-dreamworld/chapter-1/scene-7]] at Storium.
-
-!Completed Stories
-
-* [[The Loss of Magic|http://holdenlee.github.io/writing/the_loss_of_magic.doc]] - //She caressed her letters, and they popped out of the page, rustling their newfound wings. Mr. Cavid’s words looked like big fat red caterpillars; as she ran her fingers over them she could feel their spiky bodies rising from the page. They think they’re feeding on a bunch of leaves, she thought, well, guess again. The mass of green letters, each a cross between a fly and a maple key, rose from the page, overturning the bewildered caterpillars, who landed on the blank paper with a satisfying plop.//
-* [[Mona|http://holdenlee.github.io/writing/mona.doc]]
-* [[Creature Club|http://holdenlee.github.io/writing/creature-club.doc]] - //I don’t know whether it was the fuzzy black antennys ending in pom-pom balls or the sniffly pink snout or the round glimmery eyes or the two flubby flipper-wings or the simple luxury of round white balloon-like furriness, but once I laid eyes on her I had to have her. In goes the one-dollar bill; the slightest nudge of my hand sends the gripper off, before it jerks to a stop right above the creature. I press the red button and the hook descends, clutching her cotton skull, bouncing her two antennys together as she rises slowly and royally above the mass of face-down rabbits with oversize ears, scorpions with shells of yucky speckled gray-green plastic, fairies with too-orange skin and tight stiff wings. The flashing light bulbs reflect from her eyes, and as she draws to eye level she seems to be looking directly at me and saying, &quot;I knew that I was destined for higher things.&quot;//
-* [[Return to Taiwan|http://holdenlee.github.io/writing/Return%20to%20Taiwan.docx]] - //&quot;We’re so glad you returned to Taiwan,&quot; they all said, like it was where I belonged, like I had been born there too, not just my parents. They waved tearfully, and Liangliang asked, &quot;When’s the next time you’ll return to Taiwan?&quot; Because &quot;going to Taiwan&quot; didn’t have the same ring to it... I returned to Taiwan again, unexpectedly, during the winter of sixth grade. Permanently.//
-* [[Huntress|http://holdenlee.github.io/writing/huntress.docx]] //The girl moved through the long grass. The wind pushed the prairie grasses against her face and wove them into her hair. When she was close enough to see the lion breathing, she hoisted up her iron pike and lunged.
-A hand deftly caught the pike around the middle. A boy had suddenly appeared, sitting astride the lion. He looked at her unblinkingly, his gaze telling her he would not hesitate to kill her, and wrenched the pike from her grasp. She reached for her Assassin’s Knife—just one quick slice at the lion’s chest would suffice—but the boy suddenly thrust her pike towards her, and by reflex she somersaulted backwards, barely avoiding it.//
-* [[Two Sides of the River|https://www.holdenlee/github.io/writing/Two%20sides%20of%20the%20river.docx]]
-
-!Poetry
-
-* [[Friendship's End|https://docs.google.com/document/d/1zs3WfQyXXkDucwhVdk_8QZahi2P6H5NRqoPEhl8HNhE/]]
-* [[Infinite Love|http://holdenlee.github.io/writing/Infinite%20Love.doc]]
-* [[Falling leaves|https://holdenlee.wordpress.com/2014/10/20/falling-leaves/]]
-* [[Lemon|http://www.oneword.com/word/lemon/comment-page-1/#comment-549410]]
-* [[Love {|http://holdenlee.github.io/writing/Love%20{.doc]]
-
-!Shorts and scraps
-
-* [[All my onewords|http://www.oneword.com/members/silversheep/]]
-* [[Balloon|https://docs.google.com/document/d/1_N4ud2qUfq19Vaf0nU6Us7hIZEr62rGey5i02kC-x60/edit?usp=sharing]]
-
-!Unfinished
-
-* Pleasant Island 1 - After their houseboat was destroyed by a sea monster, Al, Brody, Tommy, Aly, Betty, and Tinny find themselves stranded on a magical island filled with fantastical creatures. The island seems peaceful at first, but they soon have to confront Crocomons, defend themselves from live snowballs, and finally save the island from volcanic destruction. How will they manage to escape? (Here is a sample chapter on [[Foogcloos|http://holdenlee.github.io/writing/Foogcloos-edit.doc]].)
-* Pleasant Island 2: The Legend of Magicoly - (Sequel) A magical storm sends Pleasant Island hurtling into space, and a giant beetle shows up on the family's doorstep. Before they know it, the family is whisked off to the new Pleasant Island. At first they enjoy their time as tourists but soon they find themselves in the middle of an all-out attack on the archipelago...
-* Into the World of Dreams - [[prologue|http://holdenlee.github.io/writing/prologue.docx]]
-* Context Cities (~NaNoWriMo 2014. [[About|https://holdenlee.wordpress.com/2014/10/30/i-am-writing-a-novel-in-november/]], [[one chapter|https://holdenlee.wordpress.com/2015/10/17/wymar-the-city-of-wind/]])
-* [[Don't grow up it's a conspiracy|https://docs.google.com/document/d/1vwAsNirx7HI0GATayO-omJMIIQrKOSHSFO_wnrhKfsU/edit?usp=sharing]]
-
-!Coming soon
-
-* A Random Collection
-* Three
-
-© All rights reserved.</pre>
+This page has moved to [[here|http://holdenlee.github.io/blog/creations.html]].
+</pre>
 </div>
 <div changecount="3" created="20141129201500000" creator="Holden" modified="20150105195959523" modifier="Holden" tags="likes conversation" title="On favorites" type="text/vnd.tiddlywiki">
 <pre>Back to [[Likes]].
@@ -7649,15 +7608,15 @@ The metaphor given by the picture occurs in a lot of different settings. For exa
 <pre>//under construction//
 </pre>
 </div>
-<div created="20151108014717422" modified="20151108023207034" tags="" title="Research">
+<div created="20151108014717422" modified="20170105202033831" tags="" title="Research">
 <pre>Back to [[Math]]. See also [[Math/CS hobbies]].
 
-I am a Ph.D. student at Princeton working with [[Zeev Dvir|https://www.cs.princeton.edu/~zdvir/]]. 
-I have broad interests in theoretical computer science and related math.
+I am a Ph.D. student at Princeton working with Sanjeev Arora ([[research group page|http://unsupervised.cs.princeton.edu/]]).
+
+I focus on machine learning theory, and also have broad interests in theoretical computer science and related math.
 
 !Research interests
 
-* Coding theory and complexity theory: How can we construct locally testable, decodable, and correctible codes with better parameters, or prove lower bounds on the complexity of such codes? How are such problems related to problems in additive combinatorics and incidence geometry?
 * Machine learning: Although many machine learning problems are NP-complete, the instances that arise in reality are a restricted subset that is often more tractable. What hidden structure do these instances, and how can we design algorithms to take advantage of it? (See [[Arora's course|http://www.cs.princeton.edu/courses/archive/spring15/cos598D/]].)
 
 !Papers
