fix broken links

--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories Research Writing [[Main page]] [[My writing]]" title="$:/StoryList">
+<div list="Categories [[Math notes]] [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6908,8 +6908,8 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20170105201604665" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
-<pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20170324170408620" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<pre>&lt;html&gt;&lt;img src=&quot;https://www.dropbox.com/s/f0ukrvirmenbsdy/me2.JPG?dl=0&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
 
@@ -7174,7 +7174,7 @@ What makes good math writing? What makes a math book good?
 * My quora answer on [[writing summary notes|https://www.quora.com/What-should-one-who-is-creating-a-summary-note-scribe-note-lecture-note-etc-for-an-advanced-mathematics-course-care-about/answer/Holden-Lee]]
 </pre>
 </div>
-<div created="20150301150249760" modified="20161126220641796" tags="" title="Math notes">
+<div created="20150301150249760" modified="20170324170321145" tags="" title="Math notes">
 <pre>Everything on this page is licensed under a &lt;a rel=&quot;license&quot; href=&quot;http://creativecommons.org/licenses/by-sa/3.0/&quot;&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;/a&gt;. 
 Notes for seminars and talks are available at my blog 
 http://holdenlee.github.io/blog/notes.html.
@@ -7187,14 +7187,14 @@ Please do contact me if you find typos, want to help improve the notes, want sou
 
 !Number Theory
 
-I've compiled all my number theory notes in the following open-source [[textbook|https://dl.dropboxusercontent.com/u/27883775/math%20notes/number-theory.pdf]].
+I've compiled all my number theory notes in the following open-source [[textbook|https://www.dropbox.com/s/agebfj7rldc9wl1/number-theory.pdf?dl=0]].
 Source code is available at the dedicated repository https://github.com/holdenlee/number-theory. Note much of this is still pretty sketchy; I've extracted the more complete parts into the two documents beolow.
 Contributions and corrections are welcome; please email me at holdenlee@alum.mit.edu.
 
 Update: Please use this [[googledoc|http://goo.gl/JXBHHS]] to report typos and for general comments and discussion on the text. I will check it periodically.
 
-* Proof of prime number theorem for arithmetic progressions: [[analytic-nt.pdf|https://dl.dropboxusercontent.com/u/27883775/math%20notes/analytic-nt.pdf]]
-* Algebraic number theory, class field theory, and complex multiplication: [[ant.pdf|https://dl.dropboxusercontent.com/u/27883775/math%20notes/ant.pdf]]
+* Proof of prime number theorem for arithmetic progressions: [[analytic-nt.pdf|https://www.dropbox.com/s/zf0wjpfylpcd4rf/analytic-nt.pdf?dl=0]]
+* Algebraic number theory, class field theory, and complex multiplication: [[ant.pdf|https://www.dropbox.com/s/n0hgikez3nlfdui/ant.pdf?dl=0]]
 
 For recent updates, please see the googledoc.
 
@@ -7256,27 +7256,27 @@ Note: the earlier notes are pdfs compiled from Word. I've given errata for them 
 * Analysis
 ** [[Real analysis|http://holdenlee.github.io/coursework/math/real_analysis.pdf]] (18.100C), [[errata|http://holdenlee.github.io/coursework/math/real_analysis_errata.txt]]
 ** [[Measure theory|http://holdenlee.github.io/coursework/math/18125/notes.pdf]] (18.125) (Note several sections in the latter half are incomplete.)
-** [[Functional analysis|https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_functional.pdf]] ([[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/functional.zip]] (Part III, Fall 2013) (Ask me for a link to the ~ShareLaTeX.)
-** [[Distribution theory|https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_distributions.pdf]] ([[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/distributions.zip]])
+** [[Functional analysis|https://www.dropbox.com/s/uo5jgpteak379k9/part_iii_functional.pdf?dl=0]] ([[source|https://www.dropbox.com/s/zqmyqe06s9zstrd/functional.zip?dl=0]] (Part III, Fall 2013) (Ask me for a link to the ~ShareLaTeX.)
+** [[Distribution theory|https://www.dropbox.com/s/kn8evd9ucztiek1/part_iii_distributions.pdf?dl=0]] ([[source|https://www.dropbox.com/s/jtjgic4xbzj77qn/distributions.zip?dl=0]])
 * Geometry
 ** [[Geometry of manifolds|http://holdenlee.github.io/coursework/math/18.965/main.pdf]] (18.965)
 ** [[Topology|http://holdenlee.github.io/coursework/math/topology.pdf]] (18.901), [[errata|http://holdenlee.github.io/coursework/math/topology_errata.txt]]
 * Combinatorics
 ** [[Geometric graph theory|http://holdenlee.github.io/coursework/math/18.318/main.pdf]] (18.318)
 ** [[Probabilistic methods|http://holdenlee.github.io/coursework/math/18997/notes.pdf]] (18.997, spring 2011), [[problem sets|http://holdenlee.github.io/coursework/math/18997/psets.zip]]
-** [[Extremal and probabilistic combinatorics |https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_combo.pdf]] (Part III, Spring 2014)
-** [[Noise sensitivity|https://dl.dropboxusercontent.com/u/27883775/math%20notes/noise_sensitivity.pdf]] [[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/ns.zip]] (Part III essay)
-** [[Ramsey theory|https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_ramsey.pdf]] [[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/ramsey.zip]] (Part III, Fall 2013)
+** [[Extremal and probabilistic combinatorics |https://www.dropbox.com/s/plrdg8oak90o0g2/part_iii_combo.pdf?dl=0]] (Part III, Spring 2014)
+** [[Noise sensitivity|https://www.dropbox.com/s/wob1sfwxffwznwm/noise_sensitivity.pdf?dl=0]] [[source|https://www.dropbox.com/s/6siohdavet0lnkb/ns.zip?dl=0]] (Part III essay)
+** [[Ramsey theory|https://www.dropbox.com/s/6siohdavet0lnkb/ns.zip?dl=0]] [[source|https://www.dropbox.com/s/10bymuecjvw5wlp/ramsey.zip?dl=0]] (Part III, Fall 2013)
 ** [[Arithmetic combinatorics|https://docs.google.com/document/d/177DqNun66BGiLKmOIPdOHeHf8lbcZUM7OHpNlsUY7Ho/edit#]] (Part III, Fall 2013)
-** [[Additive combinatorics and equidistribution |https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_equidistribution.pdf]] [[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/ed.zip]] (Part III, Spring 2014)
-** [[Algebraic methods in incidence theory |https://dl.dropboxusercontent.com/u/27883775/math%20notes/AMiIT_review.pdf]] [[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/AMiIT.zip]] (Part III, Spring 2014)
+** [[Additive combinatorics and equidistribution |https://www.dropbox.com/s/tkkgwcrcxxecuhk/part_iii_equidistribution.pdf?dl=0]] [[source|https://www.dropbox.com/s/foqhbttmqyqu2yo/ed.zip?dl=0]] (Part III, Spring 2014)
+** [[Algebraic methods in incidence theory |https://www.dropbox.com/s/85csggziyk983sl/AMiIT_review.pdf?dl=0]] [[source|https://www.dropbox.com/s/nmr10deid4wwvno/AMiIT.zip?dl=0]] (Part III, Spring 2014)
 * Computer science
 ** [[Theory of computation|http://holdenlee.github.io/coursework/math/18.404/main.pdf]] (18.404) 
 * Number theory
 ** Additive number theory (18.784) [[final paper|http://holdenlee.github.io/coursework/math/18784/Finite%20field%20Waring.pdf]] on finite field Waring's problem
 ** Automorphic forms (18.785) [[psets|http://holdenlee.github.io/coursework/math/18785/psets.zip]]
 ** [[Abelian varieties and p-divisible groups|http://holdenlee.github.io/coursework/math/18.787/main.pdf]] (18.787) (warning: poorly edited)
-** [[Elliptic curves|https://dl.dropboxusercontent.com/u/27883775/math%20notes/part_iii_elliptic.pdf]] [[source|https://dl.dropboxusercontent.com/u/27883775/math%20notes/elliptic.zip]] (Part III, Fall 2013)</pre>
+** [[Elliptic curves|https://www.dropbox.com/s/t1c08591cs5otfb/part_iii_elliptic.pdf?dl=0]] [[source|https://www.dropbox.com/s/pw8wd3oiiti6krs/elliptic.zip?dl=0]] (Part III, Fall 2013)</pre>
 </div>
 <div changecount="5" created="20131214191400000" creator="Holden" modified="20150105205548641" modifier="Holden" tags="math idea" title="Math road maps" type="text/vnd.tiddlywiki">
 <pre>I think it's immensely helpful to gather up &quot;road maps&quot; of different math subjects. (See [[Ideas to implement]].) Here are lists of math book recommendations on the web.
