fix broken pics

--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories [[Math notes]] [[Main page]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5710,8 +5710,8 @@ Error message and password prompt
 <div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20161126220011555" title="$:/temp/search">
-<pre></pre>
+<div created="20150126153012617" modified="20170324171237483" title="$:/temp/search">
+<pre>web</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -6647,7 +6647,7 @@ Everyone can come up with their own list of lenses, but we need experience in or
 <div changecount="2" created="20130917205400000" creator="Holden" modified="20150105205643242" modifier="Holden" tags="under_construction" title="Lenses for writing" type="text/vnd.tiddlywiki">
 <pre>(To be added)</pre>
 </div>
-<div changecount="20" created="20131215173900000" creator="Holden" modified="20150105200022510" modifier="Holden" tags="remix life" title="Life as remix" type="text/vnd.tiddlywiki">
+<div changecount="20" created="20131215173900000" creator="Holden" modified="20170324171232969" modifier="Holden" tags="remix life" title="Life as remix" type="text/vnd.tiddlywiki">
 <pre>Back to [[Views on life]].
 
 I think that we can all benefit from remix culture. I think it's an antidote to two types of viewpoints:
@@ -6656,11 +6656,11 @@ I think that we can all benefit from remix culture. I think it's an antidote to 
 
 We view life itself as remix, there's a complete perspective shift: life is not about the flux of ideas and accomplishments out of your own head
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/flux1.png]]
+[img[pics/flux1.png]]
 
 but also about letting ideas flow through you, and understanding that often you add a little to the idea when you let it flow through you.
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/flow.png]]
+[img[pics/flow.png]]
 
 You don't have to produce a masterpiece from start to finish (although that is very rewarding and is something to be valued). Even though the events in your life are the same as those that countless other people have experienced, no one has experienced it in the same mixture as you, and how you combine those different experiences in your life and make sense of them //is// controlled by you.
 
@@ -6672,7 +6672,7 @@ Remixing is one of the four tenets of connectivist [[MOOCs]], in addition to agg
 
 (Todo: actually put some examples here and analyze them.)
 
-(Side note: I learned about remix culture in a class on modern Chinese literature and film (we also covered Internet culture). My [[final paper|https://dl.dropboxusercontent.com/u/27883775/wiki/files/Remix%20and%20Spoofs.doc]] for the class compared remix culture in the US and China.)
+(Side note: I learned about remix culture in a class on modern Chinese literature and film (we also covered Internet culture). My [[final paper|C:\Users\oldhe\Dropbox\website\holdenlee.github.io]] for the class compared remix culture in the US and China.)
 
 !2 Why remix?
 
@@ -6908,8 +6908,8 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20170324170408620" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
-<pre>&lt;html&gt;&lt;img src=&quot;https://www.dropbox.com/s/f0ukrvirmenbsdy/me2.JPG?dl=0&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20170324170851997" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<pre>&lt;html&gt;&lt;img src=&quot;pics/me2.JPG?dl=0&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
 
@@ -7517,14 +7517,14 @@ When two people refuse because of &quot;honor&quot; to reconcile because they &q
 
 See http://en.wikipedia.org/wiki/A_Separation.</pre>
 </div>
-<div changecount="6" created="20131214160400000" creator="Holden" modified="20150105205646540" modifier="Holden" tags="math curriculum communication" title="Proofs and stories as obstacle avoidance" type="text/vnd.tiddlywiki">
+<div changecount="6" created="20131214160400000" creator="Holden" modified="20170324171032364" modifier="Holden" tags="math curriculum communication" title="Proofs and stories as obstacle avoidance" type="text/vnd.tiddlywiki">
 <pre>Back to [[Math communication]]
 
 ''Proofs as obstacle avoidance''
 
 When you look at a proof written without motivation, it may look like a very windy path:
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/obstacle1.png]]
+[img[pics/obstacle1.png]]
 
 How would someone think to come up with such a complex proof? The answer is nicely encapsulated by the [[Simon's ant|http://everything2.com/title/Simon%2527s+ant]] metaphor.
 
@@ -7532,19 +7532,19 @@ How would someone think to come up with such a complex proof? The answer is nice
 
 When you look at the obstacles to the proof, the path becomes a lot more motivated:
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/obstacle2.png]]
+[img[pics/obstacle2.png]]
 
 Thus, in teaching math it makes more sense to give proofs as successive approximations: first we're going to try to the most direct path,
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/obstacle3.png]]
+[img[pics/obstacle3.png]]
 
 we're going to see it doesn't work
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/obstacle4.png]]
+[imgpics/obstacle4.png]]
 
 and then we're going to successively refine our approach until we connect up our givens (A) and our desired (B).
 
-[img[https://dl.dropboxusercontent.com/u/27883775/wiki/pics/obstacle5.png]]
+[img[pics/obstacle5.png]]
 
 (If you're reading a math proof that's given as in the first figure, then a good way to understand it is to try working on the problem yourself until you can see the shape of the obstacle, i.e., resupply the obstacle.)
 
@@ -7809,16 +7809,16 @@ Tidbits of philosophy that's good to keep in mind.
 
 </pre>
 </div>
-<div changecount="13" created="20131214171100000" creator="Holden" modified="20150301143714427" modifier="Holden" tags="web thread life" title="Webs and threads" type="text/vnd.tiddlywiki">
+<div changecount="13" created="20131214171100000" creator="Holden" modified="20170324171311768" modifier="Holden" tags="web thread life" title="Webs and threads" type="text/vnd.tiddlywiki">
 <pre>Back to [[Views on life]].
 
 When you are in a ''web'', you have access to a lot of different information at once, and the ability to switch between tasks.
 
-&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/web.png&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
+&lt;html&gt;&lt;img src=&quot;pics/web.png&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 When you're following a ''thread'', either there is one clear road for you to take or a clear goal you're trying to reach. You focus your energy on it and block out information that is not relevant.
 
-&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/thread.png&quot; alt=&quot;thread&quot;&gt;&lt;/html&gt;
+&lt;html&gt;&lt;img src=&quot;pics/thread.png&quot; alt=&quot;thread&quot;&gt;&lt;/html&gt;
 
 !1 How webs vs. threads help us think about life
 
