--- a/creations.html
+++ b/creations.html
@@ -106,7 +106,7 @@
 	</p>
       
        <p>Tags: <a href="./tags/writing.html">writing</a></p> 
-       <p>Parent: </p> 
+       <p>Parent: <a href="./Writing.html">Writing</a></p> 
 	   <p>Children: </p> 
     </div>
     
